--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hpryzen5/mylib",
+    "name": "jipajipa/mylib",
     "description": "Library",
     "type": "library",
     "license": "MIT",
